--- a/ha-sip/config.json
+++ b/ha-sip/config.json
@@ -20,6 +20,7 @@
             "port": 5060,
             "log_level": 5,
             "name_server": "",
+            "stun_server": "",
             "cache_dir": ""
         },
         "sip": {
@@ -68,6 +69,7 @@
             "port": "int",
             "log_level": "int",
             "name_server": "str",
+            "stun_server": "str"
             "cache_dir": "str"
         },
         "sip": {
