--- a/ha-sip/config.json
+++ b/ha-sip/config.json
@@ -2,7 +2,7 @@
     "name": "ha-sip",
     "version": "3.9",
     "slug": "ha-sip",
-    "url": "https://github.com/arnonym/ha-plugins",
+    "url": "https://github.com/markchalloner/ha-plugins",
     "description": "Home-Assistant SIP Gateway",
     "arch": [
         "aarch64",
